--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -1,4 +1,4 @@
-<div class="relative" #boundary>
+<div class="relative min-h-full" #boundary>
   <form [formGroup]="searchForm">
     <label hlmLabel>{{ label }}</label>
     <input
@@ -13,9 +13,10 @@
   <button
     hlmBtn
     variant="outline"
-    *ngIf="!dropdownVisible"
+    [style]="dropdownVisible === false ? '' : 'display: none'"
     (click)="toggleDropdown()"
     class="showButton"
+    #toggleButton
   >
     {{ selectedItem() ? selectedItem()?.label : "Select an Option" }}
   </button>
