--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,8 @@
       "Noto Color Emoji";
   }
 }
+
+.as-split-gutter-icon {
+  --tw-border-opacity: 1;
+  background-color: rgb(41 37 36 / var(--tw-border-opacity));
+}
