--- a/src/app/pages/npc/npc.component.html
+++ b/src/app/pages/npc/npc.component.html
@@ -1,6 +1,13 @@
-<div class="flex w-full min-h-screen py-5 px-3 gap-5">
-  <div class="flex flex-col gap-3 w-3/4">
-    <app-npc-form />
-  </div>
-  <app-npc-output class="w-1/4 h-fit" />
+<div class="w-full py-5 px-3 gap-5">
+  <as-split direction="horizontal" gutterSize="5">
+    <as-split-area  [size]="70" minSize="40" maxSize="70" >
+      <div class="px-3">
+      <app-npc-form  />
+    </div>
+  </as-split-area>
+  <as-split-area [size]="30">
+    <app-npc-output />
+  </as-split-area>
+  </as-split>
+  
 </div>
