--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,10 @@
 <div
   class="flex w-full flex-row gap-5 border-b-2 border-stone-800 py-4 px-4 items-center justify-between"
 >
-  <div class="flex flex-row gap-[3px] items-end">
+  <div
+    class="flex flex-row gap-[3px] items-end cursor-pointer"
+    routerLink="home"
+  >
     <img src="assets/img/logo.png" class="w-9" />
 
     <h1 class="font-bold text-2xl mb-[-2px]">USK.TOOLS</h1>
@@ -9,7 +12,7 @@
 
   <div class="flex flex-row gap-3 items-center">
     <button hlmBtn variant="ghost" routerLink="quest">Quest</button>
-    <button hlmBtn variant="ghost">Item</button>
+    <button hlmBtn variant="ghost" routerLink="item">Item</button>
     <button hlmBtn variant="ghost" routerLink="npc">NPC</button>
   </div>
 </div>
