--- a/src/app/pages/item/item.component.html
+++ b/src/app/pages/item/item.component.html
@@ -1,5 +1,5 @@
 <div class="w-full py-5 px-3 gap-5">
-  <as-split direction="horizontal" gutterSize="5">
+  <as-split direction="horizontal" gutterSize="5" class="min-h-screen">
     <as-split-area [size]="70" minSize="40" maxSize="70">
       <div class="px-3">
         <app-item-form />
