--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,23 @@
   --tw-border-opacity: 1;
   background-color: rgb(41 37 36 / var(--tw-border-opacity));
 }
+
+.ngx-slider {
+  .ngx-slider-pointer {
+    background-color: black !important;
+    width: 16px !important;
+    height: 16px !important;
+    border: 1px solid white;
+    top: -7px !important;
+
+    &::after {
+      background-color: black !important;
+      top: 4px !important;
+      left: 3.5px !important;
+    }
+  }
+
+  .ngx-slider-bubble {
+    color: white !important;
+  }
+}
